# atra-web-ide

./: .cursorrules  .dockerignore  .env.client.example  .env.example  .env.quality.example  .gitignore  ALL_8_MODELS_FOUND.md  ALL_DONE.md  ALL_FIXES_COMPLETE.md  ALL_SERVER_46_KNOWLEDGE_SAVED.md  ALL_TASKS_FOR_VICTORIA.md  APPLY_CHANGES_NOW.sh  APPLY_TO_MAC_STUDIO.md  AUTONOMOUS_SYSTEMS_AUTO_START.md  BACKEND_RESTARTED.md  CHATS_IMPORTANT_FINDINGS.md  CHATS_VERIFICATION_DETAILED.md  CHAT_CONTEXT_FOR_VERONICA.md  CHAT_PROCESSING_ISSUE.md  CHAT_STATUS_REPORT.md  CHAT_SUMMARY_FOR_VICTORIA.md  CLAUDE_CODE_EXPLAINED.md  CLAUDE_CODE_MLX_SUPPORT.md  COMPLETE_DETAILED_TRACE_REPORT.md  COMPLETE_TASK_TRACE_REPORT.md  COMPLETE_TRACE_REPORT_FINAL.md  CONTRIBUTING.md  CORPORATION_STATUS_REPORT_2026-01-28.md  CORPORATION_TASKS_SYSTEM.md  CURRENT_TEST_STATUS.md  DATABASE_FIX_SUMMARY.md  DB_CONNECTION_FIX.md  DEPLOYMENT_COMPLETE.md  DETAILED_TRACE_REPORT.md  DOCKER_START_INSTRUCTIONS.md  DOCKER_STATUS_REPORT.md  DOCKER_TROUBLESHOOTING.md  ERRORS_ANALYSIS_AND_FIXES.md  EXPERT_COUNCIL_SUMMARY.md  EXPERT_MODEL_SELECTION.md  (+158 more)
.githooks/: README.md  pre-commit
ai_insights/: ai_insights_20260109_141542.md  ai_insights_20260109_144339.md  ai_insights_20260111_140644.md  ai_insights_20260111_194828.md  ai_insights_20260111_201431.md  ai_insights_20260111_202515.md  ai_insights_20260111_203013.md  ai_insights_20260112_115650.md  ai_insights_20260112_152832.md  ai_insights_20260112_153030.md  ai_insights_20260112_153457.md  ai_insights_20260112_204733.md
backend/: Dockerfile  auto_improve_config.json  requirements-dev.txt  requirements.txt
configs/: __init__.py  corporation_thinking.txt  mlx_model_timings.json  ollama_model_timings.json  victoria_capabilities.txt  victoria_common.py
data/: frequent_queries.json  real_queries.json  synthetic_query_variations.json  validation_queries.json
docs/: ACTUAL_MODELS_AND_SCRIPTS.md  ADAPTIVE_WORKER_CONCURRENCY_PLAN.md  AGENT_CHAT_UI.md  AGENT_FILE_WRITER.md  ALL_21_EXPERTS_COMPLETE.md  ALL_21_EXPERTS_TRAINED.md  ALL_DATA_LOCAL.md  ARCHITECTURE_FIXES_TASK_ROUTING.md  ARCHITECTURE_FULL.md  ARCHITECTURE_IMPROVEMENTS_ANALYSIS.md  AUTO_OPTIMIZER.md  AUTO_PROFILING_GUIDE.md  BACKUP_SETUP.md  BEST_PRACTICES_CHECKLIST.md  CHANGES_FROM_OTHER_CHATS.md  CHAT_ANALYSIS_AND_FIXES.md  CHAT_FLOW_VERIFICATION.md  CHAT_MODES_ARCHITECTURE_ANALYSIS.md  CHAT_ORCHESTRATOR_FLOW.md  CHAT_VICTORIA_ORCHESTRATOR_FLOW_VERIFICATION.md  CHECK_TASKS_IN_PROGRESS_20260203.md  CLAUDE_CODE_LOCAL_MODELS.md  CLAWDBOT_CHAT_ARCHITECTURE.md  CLAWDBOT_INTEGRATION_ANALYSIS.md  COGNITIVE_CODE.md  COMPLETE_TASK_EXECUTION_FLOW.md  COMPREHENSIVE_TESTING_REPORT.md  CONTINUOUS_IMPROVEMENT.md  COPY_FROM_ATRA_COMPLETE.md  CORPORATION_CHECK.md  CORPORATION_PLANNING_CALENDAR.md  CORPORATION_RUST_ROADMAP.md  CURATOR_RUNBOOK.md  CURRENT_MODELS_LIST.md  (+244 more)
knowledge_os/cache_normalizer_rs/: Cargo.toml  README.md  pyproject.toml
knowledge_os/cache_normalizer_rs/src/: lib.rs
(+4773 files in other folders)
