[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atra-web-ide"
version = "0.1.0"
description = "ATRA Web IDE - Browser-based IDE for AI Corporation Singularity 14.0"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ATRA Team"}
]
keywords = ["ai", "ide", "web", "development", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
packages = [
    "scripts",
    "scripts.utils",
    "knowledge_os",
    "knowledge_os.app",
    "backend",
    "backend.app",
    "src",
    "src.agents",
]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501", "F401", "F841"]  # Line too long; unused imports/vars (CI: постепенно убирать)
exclude = ["knowledge_os/cache_normalizer_rs", "target", "*.egg-info"]

[tool.pytest.ini_options]
testpaths = ["tests", "scripts"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.basedpyright]
# Использовать venv в knowledge_os для разрешения импортов (asyncpg и др.)
venvPath = "knowledge_os"
venv = ".venv"
