[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "cache_normalizer"
version = "0.1.0"
description = "Normalize text and MD5 hash for embedding cache keys (Rust/PyO3)"
requires-python = ">=3.9"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "cache_normalizer"
